--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -7,7 +7,9 @@
 
 // Components
 @import "components/callout-auth";
+@import "components/container-guideline";
 @import "components/container";
 @import "components/page-actions";
 @import "components/page-title";
 @import "components/todo";
+@import "components/survey-skin";
