--- a/app/styles/components/_callout-auth.scss
+++ b/app/styles/components/_callout-auth.scss
@@ -1,8 +1,7 @@
 .callout-auth {
   background-color: $light-grey;
   border: 1px solid $light-grey-border;
-  padding: 2rem;
-  text-align: center;
+  padding: 2rem
 
   h3, p {
     margin-bottom: 2rem;
